# ai-jobs-data-agent

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  README.en.md  README.md  VM_SETUP_GUIDE.md  app.py  docker-compose.yml  generate_report.py  pyproject.toml  requirements.txt  start_llm_server.sh  start_server.py  start_server_daemon.sh  实验报告_数据分析智能体.docx
data/: ai_jobs_market_cleaned.csv
data_agent_project/: .env.example  .gitignore  AGENT.md  PROJECT_PLAN.md  README.md  app.py  requirements.txt  start_server_daemon.sh
data_agent_project/scripts/: data_agent.py  init_db.py
db/: ER_DIAGRAM.md  ai_jobs.db  careers.db
docs/: user-taste-preference-design.md  user-taste-preference-todo.md  user-taste-preference.md
scripts/: data_agent.py  gen_er_diagram.py  generate_er_diagram.py  init_db.py  llm_utils.py
skills/shushu-internship-tool/: SKILL.md
skills/shushu-internship-tool/agents/: openai.yaml
skills/shushu-internship-tool/references/: interview-pack-template.md  modification-playbook.md  remote-compute-checklist.md  repo-selection-rubric.md
skills/shushu-internship-tool/scripts/: candidate_score.py  interview_pack.py  repo_audit.py
skills/shushu-internship-tool/scripts/shushu_internship_tool/: __init__.py  candidate_score.py  common.py  (+2 more)
tests/: test_app_preset_queries.py  test_candidate_score.py  test_docs_consistency.py  test_execute_sql_safety.py  test_init_db.py  test_interview_pack.py  test_llm_utils.py  test_repo_audit.py  test_skill_instructions.py
tests/fixtures/tiny_ai_project/: README.md  app.py  docker-compose.yml  eval.py  train.py
(+4 files in other folders)
