[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shushu-internship-tool"
version = "1.0.0"
description = "鼠鼠实习妙妙工具: AI assistant workflow and scripts for computer-industry internship project selection, remixing, resume writing, and interview preparation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "鼠鼠实习妙妙工具 contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "PyYAML>=6"
]

[project.scripts]
shushu-repo-audit = "shushu_internship_tool.repo_audit:main"
shushu-candidate-score = "shushu_internship_tool.candidate_score:main"
shushu-interview-pack = "shushu_internship_tool.interview_pack:main"

[tool.setuptools.packages.find]
where = ["skills/shushu-internship-tool/scripts"]

[tool.pytest.ini_options]
pythonpath = ["skills/shushu-internship-tool/scripts"]
testpaths = ["tests"]
addopts = "-q"
